syntax = "proto3";
package osmosis.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/bank/v1beta1/genesis.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/c-osmosis/osmosis/x/claim/types";

enum Action {
	option (gogoproto.goproto_enum_prefix) = false;
  
	ActionAddLiquidity = 0;
	ActionSwap = 1;
	ActionVote = 2;
	ActionDelegateStake = 3;
}

message UserActions {
  string user = 1;
  repeated Action actions = 2;
}

message UserAction {
  string user = 1;
  Action action = 2;
}

// GenesisState defines the claim module's genesis state.
message GenesisState {
  // balance of the claim module's account  
  cosmos.base.v1beta1.Coin module_account_balance = 1
      [ (gogoproto.moretags) = "yaml:\"module_account_balance\"", (gogoproto.nullable) = false];
  // airdrop start time
  google.protobuf.Timestamp airdrop_start_time = 2
    [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"airdrop_start_time\""];
  // duration until decay start to happen from airdrop start time
  google.protobuf.Duration duration_until_decay = 3 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "duration_until_decay,omitempty",
    (gogoproto.moretags)    = "yaml:\"duration_until_decay\""
  ];
  // duration of decay from decay start time
  google.protobuf.Duration duration_of_decay = 4 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "duration_of_decay,omitempty",
    (gogoproto.moretags)    = "yaml:\"duration_of_decay\""
  ];
  // this is the initial amount that is claimable per address
  // because the claimable amount decays over time, this is also the maximum claimable amount
  // [(account_string, max_claimable), (account_string, max_claimable) ... ]
  repeated cosmos.bank.v1beta1.Balance initial_claimables = 5
    [(gogoproto.nullable) = false];
  // the actions done per address
  // [(account_string, [done_action1, done_action2]), (account_string, [done_action1]) ... ]
  repeated UserActions activities = 6[(gogoproto.nullable) = false];
}
